Add script to generate tfrecords

--- a/02-Image-Augmentation/02_split_data.ipynb
+++ b/02-Image-Augmentation/02_split_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "16dd62f6",
+   "id": "d0e58144",
    "metadata": {},
    "source": [
     "### Load packages"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "78afc250",
+   "id": "bc3ece9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64e3a050",
+   "id": "e7068790",
    "metadata": {},
    "source": [
     "### Setup"
@@ -30,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "7310a2eb",
+   "execution_count": 22,
+   "id": "6e1ed1f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,17 +40,17 @@
     "LABEL_PATH = os.path.join(DATA_PATH, \"labels\")\n",
     "\n",
     "TRAIN_PATH = os.path.join(DATA_PATH, 'splits', 'train')\n",
-    "TEST_PATH = os.path.join(DATA_PATH, 'splits', 'test')\n",
     "VAL_PATH = os.path.join(DATA_PATH, 'splits', 'val')\n",
+    "TEST_PATH = os.path.join(DATA_PATH, 'splits', 'test')\n",
     "\n",
     "TRAIN_SPLIT = 0.7\n",
-    "TEST_SPLIT = 0.2\n",
-    "VAL_SPLIT = 0.1"
+    "VAL_SPLIT = 0.2\n",
+    "TEST_SPLIT = 0.1"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9358d3ce",
+   "id": "edbec99e",
    "metadata": {},
    "source": [
     "### Split data"
@@ -58,8 +58,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "1bbae693",
+   "execution_count": 21,
+   "id": "3fa52329",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6e55143",
+   "id": "c6e98c18",
    "metadata": {},
    "outputs": [],
    "source": []
