Update train and eval scripts for EfficientDet

--- a/02-Image-Augmentation/02_split_data.ipynb
+++ b/02-Image-Augmentation/02_split_data.ipynb
@@ -10,13 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "bc3ece9c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import xml.etree.ElementTree as ET\n",
-    "import os\n",
+    "import os, shutil\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
@@ -30,14 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "6e1ed1f0",
    "metadata": {},
    "outputs": [],
    "source": [
     "DATA_PATH = os.path.abspath(os.path.join(\"../../../..\", \"Seafile\", \"Detecting-Objects\", \"DataCollection\"))\n",
     "IMAGE_PATH = os.path.join(DATA_PATH, \"images\")\n",
-    "LABEL_PATH = os.path.join(DATA_PATH, \"labels\")\n",
     "\n",
     "TRAIN_PATH = os.path.join(DATA_PATH, 'splits', 'train')\n",
     "VAL_PATH = os.path.join(DATA_PATH, 'splits', 'val')\n",
@@ -58,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "3fa52329",
    "metadata": {},
    "outputs": [],
